# py_package_installer_cli

./: .gitignore  MANIFEST.in  README.md  cli.py  pnpm-lock.yaml  pyproject.toml  setup_hooks.py
bundle-standalone/: cli-with-packages.js
bundle-standalone/templates/c++_c/crow/template/: main.cpp
bundle-standalone/templates/c++_c/crow/template/include/: routes.hpp
bundle-standalone/templates/game/unity/template/Scripts/: PlayerController.cs
bundle-standalone/templates/game/unreal/template/Source/: PlayerCharacter.cpp  PlayerCharacter.h
bundle-standalone/templates/javascript/preactjs/javascript/template/: index.html
bundle-standalone/templates/javascript/solidjs/javascript/template/: index.html
bundle-standalone/templates/javascript/solidjs/typescript/template/: index.html
bundle-standalone/templates/python/falcon/template/: pyproject.toml
bundle-standalone/templates/web3/anchor/template/: Anchor.toml  Cargo.toml
bundle-standalone/templates/web3/anchor/template/migrations/: deploy.ts
bundle-standalone/templates/web3/anchor/template/programs/mysolanaapp/src/: lib.rs
bundle-standalone/templates/web3/anchor/template/tests/: mysolanaapp.ts
bundle-standalone/templates/web3/ethersjs/template/: hardhat.config.js
bundle-standalone/templates/web3/ethersjs/template/contracts/: SimpleStorage.sol
bundle-standalone/templates/web3/ethersjs/template/scripts/: deploy.ts  interact.ts
bundle-standalone/templates/web3/solidity/solidity-learning/01_data-types/: DataTypes.sol  SolidityOperations.sol
(+19 files in other folders)
